<resources>

    <string name="app_name">HealthApp</string>

    <string name="UsersEmail"></string>
    <string name="UsersName"></string>


    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="back">Back</string>
    <string name="change_password">Change Password</string>
    <string name="change_name">Change Name</string>
    <string name="send_notification">Send Notification</string>
    <string name="logout">Logout</string>
    <string name="participant_information">Participant Information</string>
    <string name="notifications">Notifications</string>

    <string-array name="options_array">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>
</resources>
