<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo" />

    <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:radius="0dp"
            android:text="@string/login"
            android:backgroundTint="@color/text2"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="onClickLogin" />


        <Button
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:radius="0dp"
            android:color="#FFA500"
            android:text="@string/sign_up"
            android:backgroundTint="@color/text2"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="onClickSignUp" />

</LinearLayout>
