<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/manager_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:background="#1c263d"
    tools:context=".ManagerHomeActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:text="Manager View"
        android:textColor="@color/text1"
        android:layout_gravity="center"
        android:typeface="monospace"
        android:layout_margin="30dp" />



     <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/send_notification_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="30dp"
        android:paddingHorizontal="16dp"
        android:paddingBottom="16dp"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:text="@string/send_notification"
            android:drawableEnd="@drawable/forward_arrow"
            android:textColor="@color/text1"
            android:layout_gravity="center"
            android:typeface="monospace"
            android:layout_margin="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="16dp"
        android:paddingHorizontal="16dp"
        android:paddingBottom="16dp"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/change_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:text="@string/participant_information"
            android:drawableEnd="@drawable/forward_arrow"
            android:textColor="@color/text1"
            android:layout_gravity="center"
            android:typeface="monospace"
            android:layout_margin="10dp"
            android:onClick="onClickLogout"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="16dp"
        android:paddingHorizontal="16dp"
        android:paddingBottom="16dp"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:drawableEnd="@drawable/forward_arrow"
            android:text="@string/logout"
            android:textColor="@color/text1"
            android:textSize="23sp"
            android:typeface="monospace" />
</LinearLayout>

</LinearLayout>
